--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-agp = "8.10.1"
-kotlin = "2.0.21"
+agp = "8.11.0"
+kotlin = "2.2.0"
 coreKtx = "1.16.0"
 
 junit = "4.13.2"
@@ -13,14 +13,14 @@ composeBom = "2025.06.01"
 
 # Navigation
 navigation-compose = "2.9.0"
-navigation3-runtime = "1.0.0-alpha04"
-navigation3-viewmodel = "1.0.0-alpha02"
+navigation3-runtime = "1.0.0-alpha05"
+navigation3-viewmodel = "1.0.0-alpha03"
 
 # Koin for dependency injection
-koin = "4.0.4"
+koin = "4.1.0"
 
 # Ktor
-ktorVersion = "2.3.12"
+ktorVersion = "3.2.1"
 
 annotationJvm = "1.9.1"
 
@@ -28,13 +28,13 @@ appcompat = "1.7.1"
 material = "1.12.0"
 
 #kotlinx-datetime
-kotlinx-datetime = "0.6.2"
+kotlinx-datetime = "0.7.0"
 
-kotlinxSerializationCore = "1.8.1"
-kotlinxSerializationJson = "1.8.1"
+kotlinxSerializationCore = "1.9.0"
+kotlinxSerializationJson = "1.9.0"
 
 # Kotlin Symbol Processor
-ksp = "2.0.21-1.0.28"
+ksp = "2.2.0-2.0.2"
 
 material3Android = "1.3.2"
 material3WindowSizeClassAndroid = "1.3.2"
@@ -43,7 +43,7 @@ material3WindowSizeClassAndroid = "1.3.2"
 coil-compose  = "2.7.0"
 
 android-compileSdk = "36"
-android-minSdk = "27"
+android-minSdk = "30"       # Revert to 27 once Ktor 3.2.1 released
 android-targetSdk = "36"
 android-buildtools = "36.0.0"
 
