--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,26 +1,26 @@
 [versions]
-agp = "8.11.0"
-kotlin = "2.2.0"
-coreKtx = "1.16.0"
+agp = "8.12.1"
+kotlin = "2.2.10"
+coreKtx = "1.17.0"
 
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
 
-lifecycleRuntimeKtx = "2.9.1"
+lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
-composeBom = "2025.06.01"
+composeBom = "2025.08.00"
 
 # Navigation
 navigation-compose = "2.9.0"
-navigation3-runtime = "1.0.0-alpha05"
-navigation3-viewmodel = "1.0.0-alpha03"
+navigation3-runtime = "1.0.0-alpha07"
+navigation3-viewmodel = "1.0.0-alpha04"
 
 # Koin for dependency injection
 koin = "4.1.0"
 
 # Ktor
-ktorVersion = "3.2.1"
+ktorVersion = "3.2.3"
 
 annotationJvm = "1.9.1"
 
@@ -28,13 +28,13 @@ appcompat = "1.7.1"
 material = "1.12.0"
 
 #kotlinx-datetime
-kotlinx-datetime = "0.7.0"
+kotlinx-datetime = "0.7.1"
 
 kotlinxSerializationCore = "1.9.0"
 kotlinxSerializationJson = "1.9.0"
 
 # Kotlin Symbol Processor
-ksp = "2.2.0-2.0.2"
+ksp = "2.2.10-2.0.2"
 
 material3Android = "1.3.2"
 material3WindowSizeClassAndroid = "1.3.2"
@@ -42,8 +42,14 @@ material3WindowSizeClassAndroid = "1.3.2"
 # Coil
 coil-compose  = "2.7.0"
 
+# ForteanJo libraries
+extensions-library = "1.0.0"
+compose-extensions = "1.0.0"
+
+
+# Android SDK settings
 android-compileSdk = "36"
-android-minSdk = "30"       # Revert to 27 once Ktor 3.2.1 released
+android-minSdk = "27"
 android-targetSdk = "36"
 android-buildtools = "36.0.0"
 
@@ -107,6 +113,11 @@ io-ktor-client-logging = { group = "io.ktor", name = "ktor-client-logging", vers
 io-ktor-client-okhttp = { group = "io.ktor", name = "ktor-client-okhttp", version.ref = "ktorVersion" }
 io-ktor-client-content-negotiation = { group = "io.ktor", name = "ktor-client-content-negotiation", version.ref = "ktorVersion" }
 io-ktor-serialization-json = { group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref = "ktorVersion" }
+
+# ForteanJo libraries
+kotlin-extensions_library = { module = "com.github.Forteanjo:Extensions_LIbrary", version.ref = "extensions-library" }
+compose-extensions-library = { module = "com.github.Forteanjo:Compose_Extensions_Library", version.ref = "compose-extensions" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
